Fix .fixed, add .align-self

--- a/common-css.less
+++ b/common-css.less
@@ -36,8 +36,8 @@
  * For example, using html.fixed for modals
  */
 .fixed {
-  padding: 0;
-  margin: 0;
+  padding: 0 !important;
+  margin: 0 !important;
   overflow: hidden !important;
 }
 
