--- a/common-less.less
+++ b/common-less.less
@@ -63,6 +63,10 @@ h1, h2, h3 { .hn; }
   display: flex;
 }
 
+.align-self(@val){
+  align-self: @val;
+}
+
 // Workaround Safari bug
 // [CSS Calc Viewport Units Workaround?](http://stackoverflow.com/questions/21224411/css-calc-viewport-units-workaround)
 .calc-width-subtraction (@v1, @v2) {
